// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingScreen when just made not visible 1`] = `
<div>
  <div
    class="kogito-tooling--loading-screen"
    data-testid="loading-screen-div"
    style="opacity: 0; transition: opacity 400ms;"
  >
    <div
      class="pf-c-page"
    >
      <main
        class="pf-c-page__main"
        role="main"
        tabindex="-1"
      >
        <div
          class="pf-l-bullseye"
        >
          <div
            class="pf-c-empty-state pf-m-lg"
          >
            <div
              class="pf-u-mb-lg"
            >
              <div
                aria-valuetext="Loading..."
                class="pf-c-spinner"
                role="progressbar"
              >
                <div
                  class="pf-c-spinner__clipper"
                />
                <div
                  class="pf-c-spinner__lead-ball"
                />
                <div
                  class="pf-c-spinner__tail-ball"
                />
              </div>
            </div>
            <h5
              class="pf-c-title pf-m-lg"
            >
              Loading...
            </h5>
            <div
              class="pf-c-empty-state__body"
            />
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`LoadingScreen when not visible after fadeout delay 1`] = `<div />`;

exports[`LoadingScreen when visible 1`] = `
<div>
  <div
    class="kogito-tooling--loading-screen"
    data-testid="loading-screen-div"
    style="opacity: 1;"
  >
    <div
      class="pf-c-page"
    >
      <main
        class="pf-c-page__main"
        role="main"
        tabindex="-1"
      >
        <div
          class="pf-l-bullseye"
        >
          <div
            class="pf-c-empty-state pf-m-lg"
          >
            <div
              class="pf-u-mb-lg"
            >
              <div
                aria-valuetext="Loading..."
                class="pf-c-spinner"
                role="progressbar"
              >
                <div
                  class="pf-c-spinner__clipper"
                />
                <div
                  class="pf-c-spinner__lead-ball"
                />
                <div
                  class="pf-c-spinner__tail-ball"
                />
              </div>
            </div>
            <h5
              class="pf-c-title pf-m-lg"
            >
              Loading...
            </h5>
            <div
              class="pf-c-empty-state__body"
            />
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
